# rag-and-llms

./: .gitignore  README.md  pyproject.toml  run.sh
configs/: counterfactual_rag_eval_config.yaml  medical_rag_eval_config.yaml  obsidian_rag_interaction_config.yaml
results/: evaluation_20251223_131033.json  evaluation_20251223_133227.json  evaluation_20260104_140436.json  evaluation_20260104_164918.json  evaluation_20260105_152439.json  evaluation_20260105_155407.json  evaluation_20260105_162735.json  evaluation_20260106_162700.json  evaluation_20260107_103632.json  evaluation_20260107_103928.json  evaluation_20260107_104217.json  evaluation_20260107_104414.json  evaluation_20260107_104711.json  evaluation_20260107_105040.json  evaluation_20260107_105302.json  evaluation_20260107_105445.json  evaluation_20260107_105634.json  evaluation_20260107_105953.json  evaluation_20260107_110225.json  evaluation_20260107_110810.json  evaluation_20260107_111404.json  evaluation_20260107_112710.json  evaluation_20260107_113943.json  evaluation_20260107_114551.json  evaluation_20260107_115112.json  evaluation_20260109_111731.json  evaluation_20260109_112301.json  evaluation_20260109_112946.json  evaluation_20260109_113709.json  evaluation_20260109_115343.json  evaluation_20260109_121933.json  evaluation_20260109_122510.json  evaluation_20260109_123245.json  evaluation_20260109_123946.json  evaluation_20260109_124338.json  evaluation_20260109_125434.json  evaluation_20260109_130340.json  evaluation_20260110_125817.json  evaluation_20260110_130310.json  evaluation_20260110_130802.json  (+12 more)
(+39 files in other folders)
