[project]
name = "rag-and-llms"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Tim Boleslawsky", email = "tim.boleslawsky@yahoo.com" }]
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.3",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "accelerate>=0.26.0",
    "bitsandbytes",
    "datasets"
]
